# musicus

./: README.md  pyproject.toml
src/: audio_backend.py  config.py  file_browser.py  main.py  playlist.py  songsdatabase.py
