[tool.poetry]
name = "musicus"
version = "0.1.0"
description = "Lil cmus like music player in python"
authors = ["Bluemi <bruno.schilling@protonmail.ch>"]

[tool.poetry.dependencies]
python = "^3.8"
pydub = "^0.24.1"
simpleaudio = "^1.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
